# lolptProjects

./: .gitmodules  CMakeLists.txt  main.cc
include/: BotManager.h  DatabaseOperations.h  Project.h  StaffMember.h
include/Commands/: AddStaffMember.h
src/: BotManager.cpp  DatabaseOperations.cpp  Project.cpp  StaffMember.cpp
src/Commands/: AddStaffMember.cpp
